# TileRummy2D

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  mingw-w64-toolchain.cmake  windows-compile.sh
data/: app_settings.json  game_settings.json  settings.json
data/settings/: globalSettings.txt
include/: console_logger.h  game_builder.h  i_command.h  logger.h  smart_ptr.h
include/bot/: actions_analyser.h  bot_player.h
include/bot/smart_analyser/: game_build_state.h  meld_builder.h  smart_insertions_analyser.h  tile_graph.h  tile_group.h  tile_node.h  tile_node_iterator.h  tile_wrapper.h  tile_wrapper_manager.h
include/bot/smart_analyser/commands/: add_node_command.h  assign_joker_command.h  link_node_command.h
include/game/: action.h  event.h  event_listener.h  event_publisher.h  game_dependencies.h  meld.h  meld_validator.h  melds_command.h  melds_manager.h  player.h  player_first_meld_handler.h  rummy_game.h  tile.h  tile_list.h  tile_stock.h
include/game/logger/: melds_manager_logger.h  player_controller_logger.h
include/gui/: game_event_handler.h  game_interface.h  player_controls_proxy.h  settings.h  tile_mover.h  window.h  window_factory.h
include/gui/components/: app_root_component.h  button.h  container.h  fps_counter.h  i_component_builder.h  i_updateable.h
include/gui/controls_zone_components/: controls_zone_builder.h  controls_zone_component.h
include/gui/events/: i_window_event_handler.h  i_window_events_publisher.h  window_resize_events_handler.h
include/gui/info_zone_components/: game_info_container.h  info_zone_builder.h  players_info_component.h  text_logger_component.h
include/gui/main_zone_components/: game_zone_builder.h  game_zone_container.h  i_tile_container.h  meld_container.h  meld_containers_factory.h  melds_manager_container.h  player_tiles_container.h  tile.h  tile_factory.h  tile_mover.h
include/gui/utilities/: font_loader.h  generic_coords_math.h
include/io/: file_input.h  file_output.h  i_input_stream.h  i_output_stream.h  paths.h  string_ops.h
include/settings/: app_settings.h  game_settings.h  paths.h  settings_loader.h  settings_manager.h
include/tests/: test.h  tests_declaration.h
src/: command.cpp  console_logger.cpp  game_builder.cpp  logger.cpp  loggers.cpp  main.cpp
src/bot/: base_actions_analyser.cpp  bot_player.cpp  dumb_actions_analyser.cpp  new_melds_analyser.cpp
src/bot/smart_analyser/: game_build_state.cpp  meld_builder.cpp  meld_builder_extends.cpp  smart_insertions_analyser.cpp  tile_graph.cpp  tile_group.cpp  tile_node.cpp  tile_node_iterator.cpp  tile_wrapper.cpp  tile_wrapper_manager.cpp
src/bot/smart_analyser/commands/: add_node_command.cpp  assign_joker_command.cpp  link_node_command.cpp
src/game/: action.cpp  event.cpp  event_publisher.cpp  meld.cpp  meld_command.cpp  meld_validator.cpp  melds_manager.cpp  player.cpp  player_first_meld_handler.cpp  rummy_game.cpp  tile.cpp  tile_list.cpp  tile_stock.cpp
src/game/logger/: melds_manager_logger.cpp  player_controller_logger.cpp
src/gui/: game_event_handler.cpp  game_interface.cpp  player_controls_proxy.cpp  window.cpp  window_factory.cpp
src/gui/components/: app_root_component.cpp  button.cpp  container.cpp  fps_counter.cpp
src/gui/controls_zone_components/: controls_zone_builder.cpp  controls_zone_component.cpp
src/gui/events/: window_events_publisher.cpp  window_resize_events_handler.cpp
src/gui/info_zone_components/: game_info_container.cpp  info_zone_builder.cpp  players_info_component.cpp  text_logger_component.cpp
src/gui/main_zone_components/: base_tile_container.cpp  game_zone_builder.cpp  game_zone_container.cpp  meld_container.cpp  meld_containers_factory.cpp  melds_manager_container.cpp  player_tiles_container.cpp  tile.cpp  tile_factory.cpp  tile_mover.cpp
src/gui/utilities/: font_loader.cpp  generic_coords_math.cpp
src/io/: file_input.cpp  file_output.cpp  paths.cpp  string_ops.cpp
src/settings/: app_settings.cpp  game_settings.cpp  settings_loaders.cpp  settings_manager.cpp
src/tests/: game_builder_tests.cpp  meld_manager_tests.cpp  meld_tests.cpp  test.cpp
src/tests/actions_analyser/: actions_analyser_tests.cpp  meld_builder_tests.cpp
src/tests/settings/: full_settings.json  partial_settings.json  settings_parsing_tests.cpp
src/tests/settings/app_settings/: app_settings_tests.cpp
src/tests/settings/game_settings/: full_settings.json  game_settings_tests.cpp  one_bot_settings.json  partial_settings.json
